--- a/build.xml
+++ b/build.xml
@@ -504,7 +504,7 @@
           <dependency groupId="commons-io" artifactId="commons-io" version="2.6" scope="test"/>
           <dependency groupId="org.apache.commons" artifactId="commons-lang3" version="3.11"/>
           <dependency groupId="org.apache.commons" artifactId="commons-math3" version="3.2"/>
-          <dependency groupId="org.antlr" artifactId="antlr" version="3.5.2">
+          <dependency groupId="org.antlr" artifactId="antlr" version="3.5.2" scope="provided">
             <exclusion groupId="org.antlr" artifactId="stringtemplate"/>
           </dependency>
           <dependency groupId="org.antlr" artifactId="ST4" version="4.0.8"/>
@@ -528,9 +528,9 @@
           </dependency>
           <dependency groupId="org.mockito" artifactId="mockito-core" version="3.2.4" scope="test"/>
           <dependency groupId="org.quicktheories" artifactId="quicktheories" version="0.26" scope="test"/>
-          <dependency groupId="com.google.code.java-allocation-instrumenter" artifactId="java-allocation-instrumenter" version="${allocation-instrumenter.version}" />
+          <dependency groupId="com.google.code.java-allocation-instrumenter" artifactId="java-allocation-instrumenter" version="${allocation-instrumenter.version}" scope="test"/>
           <dependency groupId="org.apache.cassandra" artifactId="dtest-api" version="0.0.7" scope="test"/>
-          <dependency groupId="org.reflections" artifactId="reflections" version="0.9.12" />
+          <dependency groupId="org.reflections" artifactId="reflections" version="0.9.12" scope="test"/>
           <dependency groupId="org.apache.hadoop" artifactId="hadoop-core" version="1.0.3" scope="provided">
             <exclusion groupId="org.mortbay.jetty" artifactId="servlet-api"/>
             <exclusion groupId="commons-logging" artifactId="commons-logging"/>
@@ -548,16 +548,18 @@
           <dependency groupId="org.jacoco" artifactId="org.jacoco.agent" version="${jacoco.version}" scope="test"/>
           <dependency groupId="org.jacoco" artifactId="org.jacoco.ant" version="${jacoco.version}" scope="test"/>
 
-          <dependency groupId="org.jboss.byteman" artifactId="byteman-install" version="${byteman.version}"/>
-          <dependency groupId="org.jboss.byteman" artifactId="byteman" version="${byteman.version}"/>
-          <dependency groupId="org.jboss.byteman" artifactId="byteman-submit" version="${byteman.version}"/>
-          <dependency groupId="org.jboss.byteman" artifactId="byteman-bmunit" version="${byteman.version}"/>
+          <dependency groupId="org.jboss.byteman" artifactId="byteman-install" version="${byteman.version}" scope="provided"/>
+          <dependency groupId="org.jboss.byteman" artifactId="byteman" version="${byteman.version}" scope="provided"/>
+          <dependency groupId="org.jboss.byteman" artifactId="byteman-submit" version="${byteman.version}" scope="provided"/>
+          <dependency groupId="org.jboss.byteman" artifactId="byteman-bmunit" version="${byteman.version}" scope="provided"/>
 
           <dependency groupId="net.bytebuddy" artifactId="byte-buddy" version="${bytebuddy.version}" />
           <dependency groupId="net.bytebuddy" artifactId="byte-buddy-agent" version="${bytebuddy.version}" />
 
           <dependency groupId="org.openjdk.jmh" artifactId="jmh-core" version="1.21" scope="test"/>
           <dependency groupId="org.openjdk.jmh" artifactId="jmh-generator-annprocess" version="1.21" scope="test"/>
+
+          <dependency groupId="org.apache.ant" artifactId="ant-junit" version="1.9.7" scope="test"/>
 
           <dependency groupId="org.apache.cassandra" artifactId="cassandra-all" version="${version}" />
           <dependency groupId="io.dropwizard.metrics" artifactId="metrics-core" version="3.1.5" />
@@ -646,7 +648,7 @@
              this that the new assertj's `assertj-parent-pom` depends on. -->
           <dependency groupId="org.junit" artifactId="junit-bom" version="5.6.0" type="pom" scope="test"/>
           <!-- when updating assertj, make sure to also update the corresponding junit-bom dependency -->
-          <dependency groupId="org.assertj" artifactId="assertj-core" version="3.15.0" scope="test"/>
+          <dependency groupId="org.assertj" artifactId="assertj-core" version="3.15.0" scope="provided"/>
           <dependency groupId="org.awaitility" artifactId="awaitility" version="4.0.3"  scope="test">
             <exclusion groupId="org.hamcrest" artifactId="hamcrest"/>
           </dependency>
@@ -707,30 +709,24 @@
                 artifactId="cassandra-parent"
                 version="${version}"
                 relativePath="${final.name}-parent.pom"/>
-        <dependency groupId="junit" artifactId="junit" scope="test"/>
-        <dependency groupId="commons-io" artifactId="commons-io" scope="test"/>
-        <dependency groupId="org.mockito" artifactId="mockito-core" scope="test"/>
-        <dependency groupId="org.quicktheories" artifactId="quicktheories" scope="test"/>
-        <dependency groupId="org.reflections" artifactId="reflections" scope="test"/>
-        <dependency groupId="com.google.code.java-allocation-instrumenter" artifactId="java-allocation-instrumenter" version="${allocation-instrumenter.version}" scope="test"/>
-        <dependency groupId="org.apache.cassandra" artifactId="dtest-api" scope="test"/>
-        <dependency groupId="org.openjdk.jmh" artifactId="jmh-core" scope="test"/>
-        <dependency groupId="org.openjdk.jmh" artifactId="jmh-generator-annprocess" scope="test"/>
-        <dependency groupId="net.ju-n.compile-command-annotations" artifactId="compile-command-annotations" scope="test"/>
-        <dependency groupId="org.apache.ant" artifactId="ant-junit" version="1.9.7" scope="test"/>
+        <dependency groupId="junit" artifactId="junit"/>
+        <dependency groupId="commons-io" artifactId="commons-io"/>
+        <dependency groupId="org.mockito" artifactId="mockito-core"/>
+        <dependency groupId="org.quicktheories" artifactId="quicktheories"/>
+        <dependency groupId="org.reflections" artifactId="reflections"/>
+        <dependency groupId="com.google.code.java-allocation-instrumenter" artifactId="java-allocation-instrumenter" version="${allocation-instrumenter.version}"/>
+        <dependency groupId="org.apache.cassandra" artifactId="dtest-api"/>
+        <dependency groupId="org.openjdk.jmh" artifactId="jmh-core"/>
+        <dependency groupId="org.openjdk.jmh" artifactId="jmh-generator-annprocess"/>
+        <dependency groupId="org.apache.ant" artifactId="ant-junit"/>
         <!-- adding this dependency is necessary for assertj. When updating assertj, need to also update the version of
              this that the new assertj's `assertj-parent-pom` depends on. -->
-        <dependency groupId="org.junit" artifactId="junit-bom" type="pom" scope="test"/>
-        <dependency groupId="org.assertj" artifactId="assertj-core" scope="test"/>
-        <dependency groupId="org.awaitility" artifactId="awaitility" scope="test"/>
-        <dependency groupId="org.hamcrest" artifactId="hamcrest" scope="test"/>
+        <dependency groupId="org.junit" artifactId="junit-bom" type="pom"/>
+        <dependency groupId="org.awaitility" artifactId="awaitility"/>
+        <dependency groupId="org.hamcrest" artifactId="hamcrest"/>
         <!-- coverage debs -->
-        <dependency groupId="org.jacoco" artifactId="org.jacoco.agent" scope="test"/>
-        <dependency groupId="org.jacoco" artifactId="org.jacoco.ant" scope="test"/>
-        <dependency groupId="org.jboss.byteman" artifactId="byteman-install" scope="test"/>
-        <dependency groupId="org.jboss.byteman" artifactId="byteman" scope="test"/>
-        <dependency groupId="org.jboss.byteman" artifactId="byteman-submit" scope="test"/>
-        <dependency groupId="org.jboss.byteman" artifactId="byteman-bmunit" scope="test"/>
+        <dependency groupId="org.jacoco" artifactId="org.jacoco.agent"/>
+        <dependency groupId="org.jacoco" artifactId="org.jacoco.ant"/>
       </artifact:pom>
 
       <!-- now the pom's for artifacts being deployed to Maven Central -->
@@ -775,8 +771,8 @@
         <dependency groupId="ch.qos.logback" artifactId="logback-classic"/>
 
         <!-- don't need hadoop classes to run, but if you use the hadoop stuff -->
-        <dependency groupId="org.apache.hadoop" artifactId="hadoop-core" optional="true" scope="provided"/>
-        <dependency groupId="org.apache.hadoop" artifactId="hadoop-minicluster" optional="true" scope="provided"/>
+        <dependency groupId="org.apache.hadoop" artifactId="hadoop-core" optional="true"/>
+        <dependency groupId="org.apache.hadoop" artifactId="hadoop-minicluster" optional="true"/>
 
         <!-- don't need the Java Driver to run, but if you use the hadoop stuff or UDFs -->
         <dependency groupId="com.datastax.cassandra" artifactId="cassandra-driver-core" classifier="shaded" optional="true"/>
@@ -821,13 +817,13 @@
         <dependency groupId="com.googlecode.concurrent-trees" artifactId="concurrent-trees" />
 
         <!-- compile tools -->
-        <dependency groupId="com.google.code.findbugs" artifactId="jsr305" scope="provided"/>
-        <dependency groupId="net.ju-n.compile-command-annotations" artifactId="compile-command-annotations" scope="provided"/>
-        <dependency groupId="org.assertj" artifactId="assertj-core" scope="provided"/>
-        <dependency groupId="org.jboss.byteman" artifactId="byteman-install" scope="provided"/>
-        <dependency groupId="org.jboss.byteman" artifactId="byteman" scope="provided"/>
-        <dependency groupId="org.jboss.byteman" artifactId="byteman-submit" scope="provided"/>
-        <dependency groupId="org.jboss.byteman" artifactId="byteman-bmunit" scope="provided"/>
+        <dependency groupId="com.google.code.findbugs" artifactId="jsr305"/>
+        <dependency groupId="net.ju-n.compile-command-annotations" artifactId="compile-command-annotations"/>
+        <dependency groupId="org.assertj" artifactId="assertj-core"/>
+        <dependency groupId="org.jboss.byteman" artifactId="byteman-install"/>
+        <dependency groupId="org.jboss.byteman" artifactId="byteman"/>
+        <dependency groupId="org.jboss.byteman" artifactId="byteman-submit"/>
+        <dependency groupId="org.jboss.byteman" artifactId="byteman-bmunit"/>
       </artifact:pom>
     </target>
 
